--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ allprojects {
         testFxVersion = '4.0.7-alpha'
         monocleVersion = '1.8.0_20'
         checkstyleVersion = '8.1'
+        restfbVersion = '2.0.0-rc.3'
 
         libDir = 'lib'
     }
@@ -65,6 +66,7 @@ allprojects {
         compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
         compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonDataTypeVersion"
         compile "com.google.guava:guava:$guavaVersion"
+        compile "com.restfb:restfb:$restfbVersion"
 
         testCompile "junit:junit:$junitVersion"
         testCompile "org.testfx:testfx-core:$testFxVersion"
@@ -148,9 +150,8 @@ class AddressBookTest extends Test {
     }
 }
 
-//help me with my gradle test:p
-task giangTests(type: AddressBookTest) {
-    include 'seedu/address/model/person/predicates/**'
+task specificTests(type: AddressBookTest) {
+    include 'seedu/address/ui/**'
     exclude 'seedu/address/commons/util/**'
     exclude 'systemtests/**'
     exclude 'guitests/**'
@@ -191,7 +192,7 @@ task headless << {
     guiTests.setHeadless()
     nonGuiTests.setHeadless()
     allTests.setHeadless()
-    giangTests.setHeadless()
+    specificTests.setHeadless()
 }
 
 // Makes sure that headless properties are set before running tests
