--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ allprojects {
     }
 
     shadowJar {
-        archiveName = "addressbook.jar"
+        archiveName = "Planno.jar"
 
         destinationDir = file("${buildDir}/jar/")
     }
