build.gradle: Update Jar name

--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,7 @@ allprojects {
     }
 
     shadowJar {
-        archiveName = "addressbook.jar"
+        archiveName = "UniCity.jar"
 
         destinationDir = file("${buildDir}/jar/")
     }
